<resources>
    <string name="phoneNum">手机号</string>
    <string name="verificationCode">验证码</string>
    <string name="pleaseInput">请输入</string>
    <string name="noEmpty">不可为空</string>
    <string name="noFormat">格式不正确</string>
    <string name="acquire">获取</string>
    <string name="pleaseWait">请等待</string>
    <string name="loading">加载中...</string>
    <string name="checkNetwork">请检查网络连接</string>
    <string name="networkTimeout">网络请求超时</string>
    <string name="ERRORServerFound">找不到服务器,请检查网络是否正常</string>
    <string name="urlError">URL错误</string>
    <string name="NoCacheFound">没有发现缓存</string>
    <string name="protocolError">协议错误</string>
    <string name="confirmPayment">确认付款</string>
    <string name="PaymentDetails">付款详情</string>
    <string name="SelectPay">选择付款方式</string>
    <string name="ChooseCoupons">选择优惠券</string>
    <string name="notarize">确认</string>
    <string name="newCardPay">使用新卡支付</string>
    <string name="paymentMethod">付款方式</string>
    <string name="CardNum">卡号</string>
    <string name="bindBankCard">绑定银行卡</string>
    <string name="nextStep">下一步</string>
    <string name="PleaseInputCardNum">请输入银行卡号</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="data_failure_top">数据加载失败</string>
    <string name="data_failure_bottom">请戳下方按钮重新加载~</string>
    <string name="anew_load">重新加载</string>
    <string name="realityMoney">实付金额</string>
    <string name="merchantName">商户名称</string>
    <string name="commodityName">商品名称</string>
    <string name="originalMoney">原价</string>
    <string name="couponMoney">优惠金额</string>
    <string name="addCard">添加银行卡</string>
    <string name="couHint">该优惠券不可取消</string>
    <string name="couponBeyond">优惠券超出支付金额,超出部分不找零</string>
    <string name="no_coupon">无可使用的优惠券</string>
    <string name="clickCoupon">点击使用优惠券</string>
    <string name="zhang">张</string>
    <string name="twoPayHint">两次密码输入不一致，请重新输入</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="PayHintOne">支付密码过于简单，请重新设置</string>
    <string name="reserved">预留</string>
    <string name="addCardHint">未绑卡成功，是否退出？</string>
    <string name="card_number_empty">请输入银行卡号</string>
    <string name="card_number_error">银行卡号错误</string>
    <string name="orderNo">订单号不能为空</string>
    <string name="load_failed">加载失败，请点我重试</string>
    <string name="load_end">没有更多数据</string>
    <string name="unbind">解绑</string>
    <string name="NoDownload">不支持下载</string>
    <string name="Receive">领取</string>
    <string name="KAC">礼包</string>
    <string name="receiveTime">领取时限：</string>
    <string name="potLife">使用时限：</string>
    <string name="ContainsItems">包含物品</string>
    <string name="payRecord">充值记录</string>
    <string name="orderId">订单编号：</string>
    <string name="dealTime">交易时间：</string>
    <string name="allPayM">应收金额：</string>
    <string name="realityPayM">实收金额：</string>
    <string name="noMsg">暂无消息</string>
    <string name="noKAC">暂无礼包</string>
    <string name="noPayRecord">暂无记录充值</string>
    <string name="SwitchAccount">切换账号</string>
    <string name="loginHintOne">登录失败，请重新登录</string>
    <string name="CloudPay">云闪付支付</string>
    <string name="BankCardPay">银行卡支付</string>
    <string name="Pay_YesInstall">下载安装</string>
    <string name="Pay_NoInstall">暂不安装</string>
    <string name="Pay_NoLoginHint">请登录</string>
</resources>
