<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pay_color_f2f2f2">

    <ListView
        android:id="@+id/PayRListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/size_5dp"
        android:divider="@color/pay_color_e9e9e9"
        android:dividerHeight="@dimen/size_1px"
        android:listSelector="@android:color/transparent"
        android:scrollbars="none" />

    <LinearLayout
        android:id="@+id/payRDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pay_color_ffffff"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:background="@color/pay_color_008bea">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/size_50dp"
                android:layout_marginRight="@dimen/size_50dp"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/payRecord"
                android:textColor="@color/pay_color_ffffff"
                android:textSize="@dimen/size_15sp" />

            <FrameLayout
                android:id="@+id/payRClose"
                android:layout_width="@dimen/size_40dp"
                android:layout_height="@dimen/size_40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/pay_btn_close" />
            </FrameLayout>
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/size_10dp">

                <TextView
                    android:id="@+id/payRTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/pay_color_333333"
                    android:textSize="@dimen/size_15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/orderId"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />

                    <TextView
                        android:id="@+id/payROrderId"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/dealTime"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />

                    <TextView
                        android:id="@+id/payRDealTime"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/allPayM"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />

                    <TextView
                        android:id="@+id/payRAllPayM"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:text="@string/realityPayM"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />

                    <TextView
                        android:id="@+id/payRRealityPayM"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="right"
                        android:maxLines="1"
                        android:textColor="@color/pay_color_919191"
                        android:textSize="@dimen/size_15sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/noPayRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/noPayRecord"
        android:visibility="gone"
        android:textColor="@color/pay_color_333333"
        android:textSize="@dimen/size_15sp" />

    <include
        layout="@layout/progress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center" />

    <include
        layout="@layout/fail_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>